--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bibaswap-libs/biba-swap-core",
   "description": "🎛 Core contracts for the Biba Swap protocol",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "homepage": "https://bitcoinbanana.finance",
   "repository": {
     "type": "git",
@@ -38,8 +38,7 @@
     "precompile": "yarn clean",
     "compile": "waffle .waffle.json",
     "pretest": "yarn compile",
-    "test": "mocha",
-    "prepublishOnly": "yarn test"
+    "test": "mocha"
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
